--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="flex flex-col md:flex-row items-center gap-12">
                     <div class="md:w-1/3 flex justify-center">
                         <img
-                            src="https://i.ibb.co/rKdhwd0R/new-photo-jpg.jpg"
+                            src="photo.jpg"
                             alt="Dr. Vidhi Rajput"
                             class="rounded-full shadow-xl border-4 border-cyan-200"
                         />
